--- a/api/src/main/resources/db/changelog/db.changelog-0.1.4.yaml
+++ b/api/src/main/resources/db/changelog/db.changelog-0.1.4.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: 1554989041418-31
+      id: 1554989041418-25
       author: ayan
       changes:
         - createTable:
@@ -56,7 +56,7 @@ databaseChangeLog:
                   name: date_updated
                   type: TIMESTAMP WITHOUT TIME ZONE
   - changeSet:
-      id: 1554989041418-32
+      id: 1554989041418-30
       author: ayan
       changes:
         - addForeignKeyConstraint:
@@ -68,18 +68,19 @@ databaseChangeLog:
             referencedColumnNames: id
             referencedTableName: payment_fee_link
   - changeSet:
-      id: 1554989041418-21
+      id: 1554989046143-21
       author: ayan
       failOnError: true
       changes:
         - sql:
             splitStatements:
             sql: >
-              ALTER TABLE fee ADD COLUMN date_apportioned TIMESTAMP WITHOUT TIME ZONE;
+              ALTER TABLE fee ADD COLUMN amount_due numeric(19, 2);
               ALTER TABLE fee ADD COLUMN date_created TIMESTAMP(3) WITHOUT TIME ZONE;
               ALTER TABLE fee ADD COLUMN date_updated TIMESTAMP(3) WITHOUT TIME ZONE;
+
   - changeSet:
-      id: 1554989046143-34
+      id: 1554989041418-22
       author: ayan
       changes:
         - createTable:
@@ -107,7 +108,7 @@ databaseChangeLog:
                   ('remission_applied', 'Valid remission received and applied to fee successfully'),
                   ('payment_apportioned', 'Valid payment received and fee apportioned successfully');
   - changeSet:
-      id: 1554989046143-35
+      id: 1554989041418-23
       author: ayan
       changes:
         - createTable:
@@ -139,7 +140,7 @@ databaseChangeLog:
                   name: date_updated
                   type: TIMESTAMP WITHOUT TIME ZONE
   - changeSet:
-      id: 1554989046143-36
+      id: 1554989041418-29
       author: ayan
       changes:
         - addForeignKeyConstraint:
@@ -168,3 +169,4 @@ databaseChangeLog:
 #              ALTER TABLE fee DROP COLUMN amount_due;
 #              ALTER TABLE fee DROP COLUMN date_created;
 #              ALTER TABLE fee DROP COLUMN date_updated;
+
