PAY-3649 PBA code refactoring changes.

--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -91,3 +91,4 @@ launch.darkly.user.name=${LAUNCH_DARKLY_USER_NAME_PREFIX:local}@feesandpay.com
 launchDarkly.connectionTimeout=3
 launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
+pba.old.config.service.names=${PBA_OLD_CONFIG_SERVICE_NAMES:CMC,PROBATE,DIVORCE}
