--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -140,3 +140,4 @@ launch.darkly.user.name=${LAUNCH_DARKLY_USER_NAME_PREFIX:dummy}@feesandpay.com
 launchDarkly.connectionTimeout=3
 launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
+pba.old.config.service.names=${PBA_OLD_CONFIG_SERVICE_NAMES:dummy}
