PAY-3649 Code review fixes.

--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -88,4 +88,4 @@ launchDarkly.connectionTimeout=3
 launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
 spring.datasource.hikari.maximum-pool-size=2
-pba.old.config.service.names=${PBA_OLD_CONFIG_SERVICE_NAMES:CMC,PROBATE,DIVORCE}
+pba.config1.service.names=${PBA_CONFIG1_SERVICE_NAMES:CMC,PROBATE,DIVORCE}
