--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "info.solidsoft.pitest" version '1.5.1'
+    id 'au.com.dius.pact' version '4.1.0'
 }
 
 apply from: 'liquibase.gradle'
@@ -22,6 +23,15 @@ sourceSets {
             srcDir file('src/functionalTest/java')
         }
     }
+
+    contractTest {
+        java {
+            compileClasspath += main.output
+            runtimeClasspath += main.output
+            srcDir file('src/contractTest/java')
+        }
+        resources.srcDir file('src/contractTest/resources')
+    }
 }
 
 apply plugin: 'idea'
@@ -31,6 +41,8 @@ idea {
         testSourceDirs += project.sourceSets.smokeTest.resources.srcDirs
         testSourceDirs += project.sourceSets.functionalTest.java.srcDirs
         testSourceDirs += project.sourceSets.functionalTest.resources.srcDirs
+        testSourceDirs += project.sourceSets.contractTest.java.srcDirs
+        testSourceDirs += project.sourceSets.contractTest.resources.srcDirs
     }
 }
 
@@ -45,7 +57,8 @@ def versions = [
         pitest      : '1.5.1',
         gradlePitest: '1.3.0',
         sonarPitest : '0.5',
-        lombok: '1.18.12'
+        lombok: '1.18.12',
+        pact_version: '4.1.7'
 ]
 
 def javaLoggingVersion = '5.1.1'
@@ -116,6 +129,8 @@ dependencies {
     smokeTestCompile sourceSets.test.runtimeClasspath
     // functional
     functionalTestCompile sourceSets.test.runtimeClasspath
+    // contract
+    contractTestCompile sourceSets.test.runtimeClasspath
     compile group: 'com.github.mifmif', name: 'generex', version: '1.0.2'
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
     functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
@@ -124,6 +139,14 @@ dependencies {
     compile group: 'org.pitest', name: 'pitest', version: versions.pitest
     compile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.4.6'
     compile 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
+
+    contractTestCompile group: 'au.com.dius.pact.provider', name: 'junit5', version: versions.pact_version
+    contractTestCompile group: 'au.com.dius.pact.provider', name: 'spring', version: versions.pact_version
+    contractTestCompile group: 'au.com.dius.pact.provider', name: 'junit5spring', version: versions.pact_version
+    contractTestCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+    contractTestCompile("org.junit.jupiter:junit-jupiter-api:5.3.2")
+    contractTestRuntime("org.junit.jupiter:junit-jupiter-engine:5.3.2")
+    contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.3.2')
 }
 
 test {
@@ -140,6 +163,14 @@ task functionalTest(type: Test, description: 'Runs the functional tests', group:
     testClassesDirs = sourceSets.functionalTest.output.classesDirs
     classpath = sourceSets.functionalTest.runtimeClasspath
 }
+
+task contractTest(type: Test) {
+    description = "Runs pact Tests"
+    useJUnitPlatform()
+    testClassesDirs = sourceSets.contractTest.output.classesDirs
+    classpath = sourceSets.contractTest.runtimeClasspath
+}
+
 
 pitest {
     targetClasses = ['uk.gov.hmcts.payment.api.*']
