--- a/build.gradle
+++ b/build.gradle
@@ -113,6 +113,7 @@ subprojects {
         testCompile group: 'junit', name: 'junit', version: '4.12'
         testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
         compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
+        compile group: 'org.owasp.encoder', name: 'encoder', version: '1.2.2'
         compile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
         compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
