PAY-3721 - Move CMC PBA from Config 1 to Config 2

--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -72,7 +72,7 @@ java:
     FEATURE_PAYMENTS_SEARCH: "true"
     FEATURE_SERVICE_CALLBACK: "true"
     PAYMENT_S2S_MICROSERVICE_NAME: payment_app
-    PBA_CONFIG1_SERVICE_NAMES: CMC,PROBATE,DIVORCE
+    PBA_CONFIG1_SERVICE_NAMES: PROBATE
 
 
   keyVaults:
@@ -107,3 +107,16 @@ java:
         - pba-fpl-payments-email-to
         - launch-darkly-sdk-key
         - payment-s2s-secret
+        - pci-pal-account-id-finrem
+        - pci-pal-antenna-tenant-name
+        - pci-pal-antenna-user-name
+        - pci-pal-antenna-client-id
+        - pci-pal-antenna-client-secret
+        - pci-pal-antenna-get-tokens-url
+        - pci-pal-antenna-launch-url
+        - pci-pal-antenna-view-id-url
+        - pci-pal-antenna-return-url
+        - pci-pal-antenna-cmc-flow-id
+        - pci-pal-antenna-probate-flow-id
+        - pci-pal-antenna-divorce-flow-id
+        - pci-pal-antenna-financial-remedy-flow-id
