--- a/api/src/test/resources/application-componenttest.properties
+++ b/api/src/test/resources/application-componenttest.properties
@@ -16,7 +16,7 @@ gov.pay.auth.key.divorce=divorce-gov-pay-key
 gov.pay.operational_services=ccd
 
 # S2S trusted services
-trusted.s2s.service.names=cmc,probate_frontend,divorce,divorce_frontend,ccd_gw,bar_api,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac
+trusted.s2s.service.names=cmc,probate_frontend,divorce,divorce_frontend,ccd_gw,bar_api,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac,unspec_service
 
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 
