--- a/api/build.gradle
+++ b/api/build.gradle
@@ -57,7 +57,7 @@ def versions = [
         pitest      : '1.5.1',
         gradlePitest: '1.3.0',
         sonarPitest : '0.5',
-        lombok: '1.18.12',
+        lombok      : '1.18.12',
         pact_version: '4.1.7'
 ]
 
@@ -65,30 +65,30 @@ def javaLoggingVersion = '5.1.1'
 
 dependencies {
 
-  compile project(':payment-gov-pay-client')
-  compile project(':payment-api-contract')
-  compile project(':payment-model')
-  compile project(':payment-reference-data')
-  compile group: 'uk.gov.hmcts.reform', name: 'logging', version: javaLoggingVersion
-  compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: javaLoggingVersion
-  compile group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: javaLoggingVersion
-  compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.3'
-  compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
-  compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.1.2.RELEASE'
-  compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.9'
-  compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version:'5.0'
-  compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.11'
-  compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.10.0'
-  compile group: 'io.springfox', name: 'springfox-swagger-ui', version:'2.9.2'
-  compile group: 'io.springfox', name: 'springfox-swagger2', version:'2.9.2'
-  compile group: 'uk.gov.hmcts.reform', name: 'liquibase-core', version:'3.8.1'
-  compile group: 'com.microsoft.azure', name: 'azure-servicebus-spring-boot-starter', version: '2.1.6'
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
-  compile group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.7.0'
+    compile project(':payment-gov-pay-client')
+    compile project(':payment-api-contract')
+    compile project(':payment-model')
+    compile project(':payment-reference-data')
+    compile group: 'uk.gov.hmcts.reform', name: 'logging', version: javaLoggingVersion
+    compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: javaLoggingVersion
+    compile group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: javaLoggingVersion
+    compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.3'
+    compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.1.2.RELEASE'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+    compile group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '5.0'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.11'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.0'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    compile group: 'uk.gov.hmcts.reform', name: 'liquibase-core', version: '3.8.1'
+    compile group: 'com.microsoft.azure', name: 'azure-servicebus-spring-boot-starter', version: '2.1.6'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-cache'
+    compile group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.7.0'
     implementation "io.github.openfeign:feign-httpclient:10.7.0"
     compile group: 'io.github.openfeign', name: 'feign-core', version: '10.7.0'
     compile group: 'org.springframework.cloud', name: 'spring-cloud-openfeign-core', version: '2.2.1.RELEASE'
@@ -103,11 +103,11 @@ dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
     compile group: 'org.springframework.retry', name: 'spring-retry'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version:'2.2.1.RELEASE'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.1.RELEASE'
     compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-api-contract', version: '2.3.0'
     compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-model', version: '2.3.0'
     compile group: 'uk.gov.hmcts.reform', name: 'health-spring-boot-starter', version: '0.0.5'
-    compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version:'0.0.4'
+    compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
     //Added this for spring boot upgrade as swagger was not working with the latest version.
     compile group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '1.2.0.RELEASE'
     compile(group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '1.0.4.RELEASE') {
@@ -171,6 +171,16 @@ task contractTest(type: Test) {
     classpath = sourceSets.contractTest.runtimeClasspath
 }
 
+task runProviderPactVerification(type: Test) {
+    logger.lifecycle("Runs pact Tests")
+    testClassesDirs = sourceSets.contractTest.output.classesDirs
+    classpath = sourceSets.contractTest.runtimeClasspath
+}
+
+runProviderPactVerification.dependsOn contractTest
+
+runProviderPactVerification.finalizedBy pactVerify
+
 
 pitest {
     targetClasses = ['uk.gov.hmcts.payment.api.*']
@@ -187,3 +197,4 @@ pitest {
     timestampedReports = true
     mutationThreshold = 90
 }
+
