--- a/api/build.gradle
+++ b/api/build.gradle
@@ -58,7 +58,7 @@ def versions = [
         gradlePitest: '1.3.0',
         sonarPitest : '0.5',
         lombok      : '1.18.12',
-        pact_version: '4.1.7'
+        pact_version: '4.1.7',
         reformS2sClient    : '3.1.1'
 ]
 
