--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,11 @@ services:
         - no_proxy
     image: hmctspublic.azurecr.io/payment/api
     environment:
-      - auth.provider.service.client.baseUrl=http://service-auth-provider-api:8080/
-      - auth.idam.client.baseUrl=https://idam-test.dev.ccidam.reform.hmcts.net
+      - auth.provider.service.client.baseUrl=http://service-auth-provider-api:8489
+      - auth.idam.client.baseUrl=http://localhost:23443
+      - idam.s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
+      - idam.s2s-auth.microservice=payment_app
+      - idam.s2s-auth.url=http://service-auth-provider-api:8489
       - CARD_PAYMENTS_REPORT_SCHEDULER_ENABLED=true
       - CARD_PAYMENTS_EMAIL_FROM=no-reply@reform.hmcts.net
       - CARD_PAYMENTS_EMAIL_TO=pepito@grillo.com
@@ -66,7 +69,7 @@ services:
       - SPRING_MAIL_PROPERTIES_MAIL_SMTP_SSL_TRUST=*
       - SPRING_MAIL_PORT=25
       - SPRING_MAIL_HOST=mta.reform.hmcts.net
-      - TRUSTED_S2S_SERVICE_NAMES=cmc,probate_frontend,divorce_frontend,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac
+      - TRUSTED_S2S_SERVICE_NAMES=cmc,probate_frontend,divorce_frontend,divorce,payment_app,ccd_gw,bar_api,api_gw,finrem_payment_service,ccpay_bubble,jui_webapp,xui_webapp,fpl_case_service,iac
       - PAYBUBBLE_HOME_URL=https://ccpay-bubble-frontend-aat.service.core-compute-aat.internal
       - PCI_PAL_CALLBACK_URL=https://core-api-mgmt-aat.azure-api.net/telephony-api/telephony/callback
       - ASB_CONNECTION_STRING=some-azure-service-bus-connection-string
@@ -93,6 +96,7 @@ services:
     image: hmctspublic.azurecr.io/rpe/service-auth-provider
     environment:
       - microserviceKeys_divorce=AAAAAAAAAAAAAAAA
+      - microserviceKeys_payment_app=AAAAAAAAAAAAAAAB
     ports:
       - 8085:8489
 
@@ -118,3 +122,47 @@ services:
     - POSTGRES_DB=fees_register
     ports:
     - 5182:5432
+
+  idam-api:
+    image: hmcts.azurecr.io/hmcts/tidam-api:latest
+    healthcheck:
+      interval: 10s
+      timeout: 10s
+      retries: 10
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://idam-database:5432/idam
+      - SPRING_DATASOURCE_USERNAME=idam-username
+      - SPRING_DATASOURCE_PASSWORD=idam-password
+      - SPRING_MAIL_HOST=smtp-server
+      - IDAM_TESTING_SUPPORT_ENABLED="true"
+      - IDAM_API_OAUTH2_CLIENT_CLIENT_SECRETS_WEBSHOW=AAAAAAAAAAAAAAAA
+      - IDAM_WEBSHOW_WHITELIST=http://localhost:8080/oauth2redirect
+      - REFORM_SERVICE_NAME=idam-api
+      - REFORM_TEAM=idam
+      - REFORM_ENVIRONMENT=local
+      - http_proxy=
+      - https_proxy=
+      - no_proxy=
+    ports:
+      - 4501:8080
+    links:
+      - smtp-server
+      - idam-database
+    depends_on:
+      - idam-database
+      - smtp-server
+
+  smtp-server:
+    image: mailhog/mailhog
+    ports:
+      - 1025:1025
+      - 8025:8025
+
+  idam-database:
+    image: postgres
+    environment:
+      - POSTGRES_USER=idam-username
+      - POSTGRES_PASSWORD=idam-password
+      - POSTGRES_DB=idam
+    ports:
+      - 5434:5432
