--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     image: hmctspublic.azurecr.io/payment/api
     environment:
       - auth.provider.service.client.baseUrl=http://service-auth-provider-api:8489
-      - auth.idam.client.baseUrl=http://
+      - auth.idam.client.baseUrl=http://idam-api:5000
       - idam.s2s-auth.totp_secret=AAAAAAAAAAAAAAAB
       - idam.s2s-auth.microservice=payment_app
       - idam.s2s-auth.url=http://service-auth-provider-api:8489
@@ -122,33 +122,80 @@ services:
     - POSTGRES_DB=fees_register
     ports:
     - 5182:5432
+
   fr-am:
     image: hmctsprivate.azurecr.io/idam/idam-fr-am:latest
     hostname: localam
     depends_on:
       - shared-db
+    ports:
+      - 8083:8083
+      - 1389:1389
   fr-idm:
     image: hmctsprivate.azurecr.io/idam/idam-fr-idm:latest
     hostname: localidm
     depends_on:
       - fr-am
       - shared-db
+    ports:
+      - 18080:18080
+      - 9010:9010
   shared-db:
     image: hmctsprivate.azurecr.io/idam/shared-db:latest
+    ports:
+      - 5432:5432
   smtp-server:
     image: mailhog/mailhog
+    ports:
+      - 1025:1025
+      - 8025:8025
   idam-api:
-    image: hmctspublic.azurecr.io/idam/api:latest
+    image: hmctspublic.azurecr.io/idam/api:stable
     depends_on:
       - fr-am
       - shared-db
+    ports:
+      - 5000:5000
+    tmpfs: /opt/app/es
+    environment:
+      - JAVA_OPTS=-Xms128m -Xms512m
+      - IDAMHEALTHCHECK_AM_ENABLED=false
+      - IDAMHEALTHCHECK_IDM_ENABLED=false
+      - STRATEGIC_ADMIN_URL=http://idam-web-admin:8082
+      - STRATEGIC_WEBPUBLIC_URL=http://idam-web-public:9002
+      - SPRING_PROFILES_ACTIVE=local
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://shared-db:5432/openidm?currentSchema=fridam
+      - SPRING_DATASOURCE_USERNAME=openidm
+      - SPRING_DATASOURCE_PASSWORD=openidm
+      - SECURITY_OAUTH2_CLIENT_CLIENTSECRET=password
+      - SECURITY_OAUTH2_CLIENT_PRE_ESTABLISHED_REDIRECT_URI=http://idam-web-public:9002/login
+      - SECURITY_OAUTH2_CLIENT_REGISTERED_REDIRECT_URI=http://idam-web-public:9002/login
+      - IDAM_SPI_FORGEROCK_AM_ROOT=http://fr-am:8083/openam
+      - IDAM_SPI_FORGEROCK_AM_TOPLEVELHOST=fr-am
+      - IDAM_SPI_FORGEROCK_AM_USERNAME=amadmin
+      - IDAM_SPI_FORGEROCK_AM_PASSWORD=Pa55word11
+      - IDAM_SPI_FORGEROCK_AM_JWKSURIFOROAUTH2CLIENTS=http://fr-am:8080/openam/oauth2/hmcts/connect/jwk_uri
+      - IDAM_SPI_FORGEROCK_IDM_ROOT=http://fr-idm:18080/openidm
+      - IDAM_SPI_FORGEROCK_IDM_USERNAME=openidm-admin
+      - IDAM_SPI_FORGEROCK_IDM_PASSWORD=openidm-admin
+      - IDAM_SPI_FORGEROCK_IDM_PIN_DEFAULTPASSWORD=BlaBlaBlackSh33p
+      - APPSETTING_NODE_PATH=/opt/app
   idam-web-public:
-    image: hmctspublic.azurecr.io/idam/web-public:latest
+    image: hmctspublic.azurecr.io/idam/web-public:stable
     depends_on:
       - idam-api
+    ports:
+      - 9002:8080
+    environment:
+      - JAVA_OPTS=-Xms128m -Xms512m
+      - STRATEGIC_SERVICE_URL=http://idam-api:5000
   idam-web-admin:
-    image: hmctspublic.azurecr.io/idam/web-admin:latest
+    image: hmctspublic.azurecr.io/idam/web-admin:stable
     depends_on:
       - idam-api
-
-
+    ports:
+      - 8082:8080
+    environment:
+      - JAVA_OPTS=-Xms128m -Xms512m
+      - STRATEGIC_SERVICE_URL=http://idam-api:5000
+      - STRATEGIC_PUBLIC_URL=http://idam-web-public:9002
