--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -12,8 +12,8 @@ java:
     SPRING_LIQUIBASE_ENABLED: true
     SPRING_CLOUD_PROPERTIESVOLUME_ENABLED: false
     OIDC_ISSUER: https://forgerock-am.service.core-compute-idam-aat2.internal:8443/openam/oauth2/hmcts
-    OIDC_CLIENT_SECRET: ***REMOVED***
-    OIDC_S2S_SECRET: G5XTFNBUW4P6ZP4F
+    OIDC_CLIENT_SECRET: DUMMY_CLIENT_SECRET
+    OIDC_S2S_SECRET: DUMMY_S2S_SECRET
     LAUNCH_DARKLY_USER_NAME_PREFIX: aat
 
     SPRING_PROFILES_ACTIVE: "liberataMock,callbackMock,ccdMock"
@@ -22,8 +22,7 @@ java:
     #Below key required for preview pipeline
     GOV_PAY_AUTH_KEY_CMC: 8ln764q6jrbgqvvvv40uggsea3h1p602v79gdrt7ni66mrmpk416ulohvd
     LAUNCH_DARKLY_SDK_KEY: sdk-06456c8b-312c-475c-b154-ca585f5ca063
-    CCPAY_BULK_SCANNING_API_URL: http://ccpay-bulkscanning-api-pr-251.service.core-compute-preview.internal
-    PAYMENT_S2S_SECRET: ETNY5CBN7NR62T6M
+    PAYMENT_S2S_SECRET: DUMMY_S2S_SECRET
     PBA_CONFIG1_SERVICE_NAMES: PROBATE
   postgresql:
     enabled: true
