--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -123,6 +123,8 @@ feature.bulk.scan.payments.check=true
 feature.bulk.scan.payments.check.pay.bubble=true
 feature.discontinued.fees=true
 
+feature.payment.allowed.hostnames=hmcts.net,gov.uk
+
 duplicate.payment.check.interval.in.minutes = 2
 
 azure.servicebus.connection-string=${ASB_CONNECTION_STRING:dummy}
