--- a/charts/payment-api/Chart.yaml
+++ b/charts/payment-api/Chart.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-appVersion: "1.0"
+apiVersion: v2
+appVersion: "2.0"
 description: Helm chart for the HMCTS payment api
 name: payment-api
 home: https://github.com/hmcts/ccpay-payment-app
@@ -7,3 +7,7 @@ version: 2.0.32
 maintainers:
   - name: HMCTS Fees & Payments Dev Team
     email: ccpay@hmcts.net
+dependencies:
+  - name: java
+    version: ~3.0.0-beta
+    repository: https://hmctspublic.azurecr.io/helm/v1/repo/
