--- a/charts/payment-api/requirements.yaml
+++ b/charts/payment-api/requirements.yaml
@@ -1,5 +1,6 @@
-dependencies:
-  - name: java
-    version: ~2.17.2
-    repository: '@hmctspublic'
+#dependencies:
+#  - name: java
+#    version: ~2.17.2
+#    repository: '@hmctspublic'
+
 
