--- a/api/build.gradle
+++ b/api/build.gradle
@@ -109,8 +109,8 @@ dependencies {
     compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-api-contract', version: '2.3.0'
     compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-model', version: '2.3.0'
 
-    compile group: 'uk.gov.hmcts.reform', name: 'health-spring-boot-starter', version: '0.0.5'
-    //compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
+    //compile group: 'uk.gov.hmcts.reform', name: 'health-spring-boot-starter', version: '0.0.5'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
 
     compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
     //Added this for spring boot upgrade as swagger was not working with the latest version.
