Updated with allowed hostanme in docker compose

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -123,7 +123,7 @@ feature.bulk.scan.payments.check=true
 feature.bulk.scan.payments.check.pay.bubble=true
 feature.discontinued.fees=true
 
-feature.payment.allowed.hostnames=hmcts.net,gov.uk
+feature.payment.allowed.hostnames=${RETURNURL_ALLOWED_HOSTNAMES:hmcts.net,gov.uk}
 
 duplicate.payment.check.interval.in.minutes = 2
 
