--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -80,7 +80,7 @@ feature.bulk.scan.payments.check=true
 feature.bulk.scan.payments.check.pay.bubble=true
 feature.discontinued.fees=true
 
-feature.payment.allowed.hostnames=hmcts.net,gov.uk,localhost
+feature.payment.allowed.hostnames=${RETURNURL_ALLOWED_HOSTNAMES:hmcts.net,gov.uk,localhost}
 
 azure.application-insights.instrumentation-key=${APPINSIGHTS_INSTRUMENTATIONKEY:dummy}
 azure.servicebus.connection-string=${ASB_CONNECTION_STRING:dummy}
