PAY-3519 : DB Upgrade from v9.6 to v11 using 2nd approach and CPU upgrade

--- a/charts/payment-api/values.yaml
+++ b/charts/payment-api/values.yaml
@@ -5,9 +5,9 @@ java:
   aadIdentityName: ccpay
   environment:
     POSTGRES_PORT: 5432
-    POSTGRES_HOST: payment-postgres-db-{{ .Values.global.environment }}.postgres.database.azure.com
+    POSTGRES_HOST: payment-postgres-db-v11-{{ .Values.global.environment }}.postgres.database.azure.com
     POSTGRES_NAME: payment
-    POSTGRES_USERNAME: payment@payment-postgres-db-{{ .Values.global.environment }}
+    POSTGRES_USERNAME: payment@payment-postgres-db-v11-{{ .Values.global.environment }}
     POSTGRES_CONNECTION_OPTIONS: ?sslmode=require
     SPRING_LIQUIBASE_ENABLED: false
 
