Updated return url's

--- a/charts/payment-api/values.preview.template.yaml
+++ b/charts/payment-api/values.preview.template.yaml
@@ -19,6 +19,8 @@ java:
     SPRING_PROFILES_ACTIVE: "liberataMock,callbackMock,ccdMock"
     CALLBACK_PAYMENTS_CUTOFF_TIME_IN_MINUTES: 0
 
+    RETURNURL_ALLOWED_HOSTNAMES: hmcts.net,gov.uk,localhost,core-compute-preview.internal
+
     #Below key required for preview pipeline
     GOV_PAY_AUTH_KEY_CMC: 8ln764q6jrbgqvvvv40uggsea3h1p602v79gdrt7ni66mrmpk416ulohvd
     LAUNCH_DARKLY_SDK_KEY: sdk-06456c8b-312c-475c-b154-ca585f5ca063
