--- a/charts/payment-api/values.aat.template.yaml
+++ b/charts/payment-api/values.aat.template.yaml
@@ -2,3 +2,4 @@ java:
   # Don't modify below here
   image: ${IMAGE_NAME}
   ingressHost: ${SERVICE_FQDN}
+  RETURNURL_ALLOWED_HOSTNAMES: hmcts.net,gov.uk,core-compute-preview.internal
