--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 plugins {
     id 'application'
     id "org.sonarqube" version "3.0"
-    id 'org.springframework.boot' version '2.3.0.RELEASE'
+    id 'org.springframework.boot' version '2.3.6.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id "uk.gov.hmcts.java" version '0.12.0'
     id "com.gorylenko.gradle-git-properties" version "1.4.21"
     id 'jacoco'
 }
 
-def springBootVersion = '2.3.0.RELEASE'
+def springBootVersion = '2.3.6.RELEASE'
 def springCloudVersion = 'Finchley.SR2'
 
 
@@ -129,6 +129,7 @@ subprojects {
                     }
                 }
             }
+            exclude(module: 'io.micrometer:micrometer-core:1.5.7')
         }
 
     }
