--- a/build.gradle
+++ b/build.gradle
@@ -122,6 +122,7 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-validation'
 
         compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.3') {
+            exclude(module:"org.springframework.boot:spring-boot-starter-actuator")
             sourceSets {
                 main {
                     java {
