--- a/build.gradle
+++ b/build.gradle
@@ -125,7 +125,7 @@ subprojects {
             exclude(module:"micrometer-core")
         }
         compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.3') {
-            exclude(module:"org.springframework.boot:spring-boot-starter-actuator")
+            exclude(module:"micrometer-core")
             sourceSets {
                 main {
                     java {
