--- a/api/build.gradle
+++ b/api/build.gradle
@@ -74,12 +74,14 @@ dependencies {
   compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.3'
-  compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.reformS2sClient
+  compile (group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.reformS2sClient){
+      exclude(module: 'spring-boot-starter-actuator')
+  }
   compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-  compile (group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'){
-        exclude(module:"micrometer-core")
+  compile (group: 'org.springframework.boot', name: 'spring-boot-starter-actuator',version: '2.3.6.RELEASE'){
+        exclude(module: "micrometer-core")
     }
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.1.2.RELEASE'
@@ -108,13 +110,13 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
     compile group: 'org.springframework.retry', name: 'spring-retry'
     compile (group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.1.RELEASE'){
-        exclude(module:"micrometer-core")
+        exclude(module: 'spring-boot-starter-actuator')
     }
     compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-api-contract', version: '2.3.0'
     compile group: 'uk.gov.hmcts.reform.fees-register', name: 'fees-register-model', version: '2.3.0'
     // Removed health starter for spring boot 2.3.0 and helm chart upgrade PAY-3831
     //compile group: 'uk.gov.hmcts.reform', name: 'health-spring-boot-starter', version: '0.0.5'
-    //compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
+    compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
     //Added this for spring boot upgrade as swagger was not working with the latest version.
     compile group: 'org.springframework.plugin', name: 'spring-plugin-core', version: '1.2.0.RELEASE'
     compile(group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '1.0.4.RELEASE') {
@@ -126,9 +128,7 @@ dependencies {
     testCompile group: 'org.springframework.security', name: 'spring-security-test', version: '5.0.4.RELEASE'
     testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     testCompile group: 'org.hsqldb', name: 'hsqldb', version: '2.3.4'
-    testCompile (group: 'com.github.tomakehurst', name: 'wiremock'){
-        exclude(module:"micrometer-core")
-    }
+    testCompile group: 'com.github.tomakehurst', name: 'wiremock'
     testCompile group: 'org.projectlombok', name: 'lombok', version: versions.lombok
     testCompile group: 'io.rest-assured', name: 'rest-assured', version: '3.0.7'
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
