--- a/build.gradle
+++ b/build.gradle
@@ -109,9 +109,7 @@ subprojects {
         compile group: 'joda-time', name: 'joda-time', version: '2.10.5'
         compile group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version:'1.0.0'
         compile group:'org.apache.poi', name: 'poi-ooxml', version: '4.1.2'
-        compile (group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'){
-            exclude(module:"micrometer-core")
-        }
+        compile group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.0.4'
         testCompile group: 'junit', name: 'junit', version: '4.12'
         testCompile group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
         compileOnly group: 'net.sourceforge.findbugs', name: 'annotations', version: '1.3.2'
@@ -120,9 +118,8 @@ subprojects {
         compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
-        implementation 'org.springframework.boot:spring-boot-starter-validation'
         compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.3') {
-            exclude(module:"micrometer-core")
+            exclude(module: 'spring-boot-starter-actuator')
             sourceSets {
                 main {
                     java {
@@ -130,9 +127,7 @@ subprojects {
                     }
                 }
             }
-
         }
-
 
     }
 }
