removed comented code

--- a/build.gradle
+++ b/build.gradle
@@ -119,8 +119,8 @@ subprojects {
         annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         implementation 'org.springframework.boot:spring-boot-starter-validation'
+        compile group: 'io.micrometer', name: 'micrometer-core', version: '1.6.1'
         compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.3') {
-            exclude(module: "micrometer-core")
             sourceSets {
                 main {
                     java {
