validation dependency added

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ configurations.all {
             if (det.requested.name == 'micrometer-core' && det.requested.group == 'io.micrometer') {
                 det.useVersion '1.6.1'
             }
+
         }
     }
 }
@@ -129,6 +130,7 @@ subprojects {
         compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
         testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+        implementation 'org.springframework.boot:spring-boot-starter-validation'
         compile(group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.3') {
             exclude(module: "micrometer-core")
             sourceSets {
