--- a/api/build.gradle
+++ b/api/build.gradle
@@ -69,7 +69,6 @@ def javaLoggingVersion = '5.1.1'
 configurations.all {
     resolutionStrategy {
         eachDependency { DependencyResolveDetails det ->
-
             if (det.requested.name == 'micrometer-core' && det.requested.group == 'io.micrometer') {
                 det.useVersion '1.6.1'
             }
@@ -86,18 +85,11 @@ dependencies {
   compile group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: javaLoggingVersion
   compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.3'
-  compile (group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.reformS2sClient){
-      exclude(module: "micrometer-core")
-  }
+  compile (group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.reformS2sClient)
   compile group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
-  compile (group: 'org.springframework.boot', name: 'spring-boot-starter-web'){
-      exclude  group: 'io.micrometer',module: "micrometer-core"
-  }
+  compile (group: 'org.springframework.boot', name: 'spring-boot-starter-web')
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
-  compile (group: 'org.springframework.boot', name: 'spring-boot-starter-actuator',version: '2.3.6.RELEASE'){
-      exclude  group: 'io.micrometer',module: "micrometer-core"
-  }
-  compile ('io.micrometer:micrometer-core')
+  compile (group: 'org.springframework.boot', name: 'spring-boot-starter-actuator',version: '2.3.6.RELEASE')
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.1.2.RELEASE'
   compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.9'
@@ -112,9 +104,7 @@ dependencies {
   compile group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.7.0'
     implementation "io.github.openfeign:feign-httpclient:10.7.0"
     compile group: 'io.github.openfeign', name: 'feign-core', version: '10.7.0'
-    compile (group: 'org.springframework.cloud', name: 'spring-cloud-openfeign-core', version: '2.2.1.RELEASE'){
-        exclude(module: "micrometer-core")
-    }
+    compile (group: 'org.springframework.cloud', name: 'spring-cloud-openfeign-core', version: '2.2.1.RELEASE')
     compile group: 'org.ff4j', name: 'ff4j-spring-boot-web-api', version: '1.7.1'
     compile group: 'org.ff4j', name: 'ff4j-web', version: '1.7.1'
     compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.3'
