--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -6,6 +6,11 @@ spring.datasource.password=payment
 spring.datasource.driver=org.postgresql.Driver
 #spring.autoconfigure.exclude=uk.gov.hmcts.reform.ccd.client.CoreCaseDataClientAutoConfiguration
 
+server.port = 8070
+
+endpoints.health.sensitive=false
+
+
 spring.liquibase.enabled=${SPRING_LIQUIBASE_ENABLED:true}
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 # GovPay & Key Configuration
@@ -73,6 +78,7 @@ gov.pay.operational_services=ccd_gw
 management.endpoints.web.base-path=/
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+management.health.defaults.enabled=false
 
 fees.register.url=https://fees-register-api.platform.hmcts.net
 
