removed the CCD hard dependency

--- a/api/src/main/resources/application-local.properties
+++ b/api/src/main/resources/application-local.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/payment
 spring.datasource.username=payment
 spring.datasource.password=payment
 spring.datasource.driver=org.postgresql.Driver
-#spring.autoconfigure.exclude=uk.gov.hmcts.reform.ccd.client.CoreCaseDataClientAutoConfiguration
+spring.autoconfigure.exclude=uk.gov.hmcts.reform.ccd.client.CoreCaseDataClientAutoConfiguration
 
 server.port = 8070
 
