Updated with tescases

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -145,3 +145,6 @@ launchDarkly.connectionTimeout=3
 launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
 pba.config1.service.names=${PBA_CONFIG1_SERVICE_NAMES:dummy}
+
+
+location.ref.url=http://rd-location-ref-api-aat.service.core-compute-aat.internal
