--- a/api-contract/build.gradle
+++ b/api-contract/build.gradle
@@ -1,5 +1,15 @@
 
 description = ''
+configurations.all {
+    resolutionStrategy {
+        eachDependency { DependencyResolveDetails det ->
+            if (det.requested.name == 'handlebars') {
+                det.useVersion '4.2.0'
+            }
+
+        }
+    }
+}
 dependencies {
     compile group: 'org.hibernate', name: 'hibernate-validator', version:'6.0.17.Final'
     compile group: 'org.glassfish', name: 'javax.el', version: '3.0.1-b11'
