--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,19 @@ def versions = [
         javaVersion: '11',
         jacocoVersion: '0.8.5'
 ]
+configurations.all {
+    resolutionStrategy {
+        eachDependency { DependencyResolveDetails det ->
+            if (det.requested.name == 'guava') {
+                det.useVersion '30.1-jre'
+            }
+            if (det.requested.name == 'handlebars') {
+                det.useVersion '4.2.0'
+            }
 
+        }
+    }
+}
 allprojects {
     apply plugin: 'maven'
     apply plugin: 'io.spring.dependency-management'
@@ -101,7 +113,15 @@ subprojects {
             exceptionFormat = 'full'
         }
     }
-
+    configurations.all {
+        resolutionStrategy {
+            eachDependency { DependencyResolveDetails det ->
+                if (det.requested.name == 'handlebars') {
+                    det.useVersion '4.2.0'
+                }
+            }
+        }
+    }
     dependencies {
         compile ('com.sun.xml.bind:jaxb-osgi:2.3.1')
         testCompile 'io.github.openfeign:feign-jackson:9.7.0'
