--- a/gov-pay-client/build.gradle
+++ b/gov-pay-client/build.gradle
@@ -1,5 +1,13 @@
 description = ''
-
+configurations.all {
+    resolutionStrategy {
+        eachDependency { DependencyResolveDetails det ->
+            if (det.requested.name == 'handlebars') {
+                det.useVersion '4.2.0'
+            }
+        }
+    }
+}
 dependencies {
     compile group: 'org.springframework', name: 'spring-context', version: '5.1.3.RELEASE'
     compile group: 'org.apache.httpcomponents', name: 'httpclient'
