--- a/reference-data/build.gradle
+++ b/reference-data/build.gradle
@@ -1,5 +1,13 @@
 description = 'Managing reference data required for payments'
-
+configurations.all {
+    resolutionStrategy {
+        eachDependency { DependencyResolveDetails det ->
+            if (det.requested.name == 'handlebars') {
+                det.useVersion '4.2.0'
+            }
+        }
+    }
+}
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
