--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ configurations.all {
             if (det.requested.name == 'handlebars') {
                 det.useVersion '4.2.0'
             }
+            if (det.requested.name == 'bcprov-jdk15on') {
+                det.useVersion '1.64'
+            }
         }
     }
 }
