--- a/build.gradle
+++ b/build.gradle
@@ -18,17 +18,6 @@ def versions = [
         jacocoVersion: '0.8.5'
 ]
 
-configurations.all {
-    resolutionStrategy {
-        eachDependency { DependencyResolveDetails det ->
-            if (det.requested.name == 'bcprov-jdk15on') {
-                det.useVersion '1.68'
-            }
-
-        }
-    }
-}
-
 allprojects {
     apply plugin: 'maven'
     apply plugin: 'io.spring.dependency-management'
@@ -43,6 +32,23 @@ allprojects {
 
     sourceCompatibility = versions.javaVersion
     targetCompatibility = versions.javaVersion
+
+
+    configurations.all {
+        resolutionStrategy {
+            eachDependency { DependencyResolveDetails det ->
+
+                if (det.requested.name == 'handlebars') {
+                    det.useVersion '4.2.0'
+                }
+
+                if (det.requested.name == 'bcprov-jdk15on') {
+                    det.useVersion '1.68'
+                }
+
+            }
+        }
+    }
 
     repositories {
         mavenLocal()
