Reverted the changes based on latest status.

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -144,3 +144,4 @@ launch.darkly.user.name=${LAUNCH_DARKLY_USER_NAME_PREFIX:dummy}@feesandpay.com
 launchDarkly.connectionTimeout=3
 launchDarkly.socketTimeout=3
 launchDarkly.flushInterval=10
+pba.config1.service.names=${PBA_CONFIG1_SERVICE_NAMES:dummy}
